--- a/ebooks/config/.env
+++ b/ebooks/config/.env
@@ -1,2 +1,3 @@
 DEBUG=TRUE
 SECRET_KEY=django-insecure-v)#m7ukrna7g72e&_oqtq7qk*b1ett2@y%_=q1tf_38hll0@)6
+DATABASE_URL=psql://postgres:test123@127.0.0.1:5432/dbebook
